syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";


option go_package = "github.com/freer4an/simple-bank/pb";

message LoginUserRequest {
    string username = 1;
    string password = 4;
}

message LoginUserResponse {
    string uuid = 1;
    string acces_token = 2;
    google.protobuf.Timestamp acces_token_expires = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp refresh_token_expires = 5;
    User user = 6;
}
